--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,36 @@
   grid-template-columns: 26% 48% 26%;
   text-align: center;
 }
+.product-landing-wrapper img {
+  width: 100%;
+}
 
 .sticky-wrapper {
   position: sticky;
   top: 0px;
+}
+
+.product-pages-wrapper {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: center;
+  grid-gap: 50px 100px;
+  text-align: center;
+  max-width: 900px;
+  margin: 36px auto;
+}
+@media (max-width: 1280px) {
+  .product-pages-wrapper {
+    margin: 36px 12%;
+  }
+}
+.product-pages-wrapper img {
+  max-height: 400px;
+  max-width: 400px;
+}
+
+.product-3 {
+  grid-column: 1/3;
 }
 
 /*# sourceMappingURL=styles.css.map */
