--- a/styles.scss
+++ b/styles.scss
@@ -1,10 +1,59 @@
+//-------------------------------- VARIABLES ---------------------------------//
+
+// Screen sizes
+$screen-xs:                           300px;
+$screen-sm:                           576px;
+$screen-md:                           768px;
+$screen-lg:                           993px;
+$screen-xl:                           1280px;
+$screen-xxl:                          1440px;
+$screen-sm-max:                       ($screen-sm - 1);
+$screen-md-max:                       ($screen-md - 1);
+$screen-lg-max:                       ($screen-lg - 1);
+$screen-xl-max:                       ($screen-xl - 1);
+
+$header-text-color:                   #333333;
+$sub-header-text-color:               #FFFFFF;
+
+//-------------------------------- GENERAL -----------------------------------//
+
+
+
+//---------------------------- PRODUCT LANDING -------------------------------//
+
 .product-landing-wrapper {
   display: grid;
   grid-template-columns: 26% 48% 26%;
   text-align: center;
+  img {
+    width: 100%;
+  }
 }
 
 .sticky-wrapper {
   position: sticky;
   top: 0px;
+}
+
+//----------------------------- PRODUCT PAGES --------------------------------//
+
+.product-pages-wrapper {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: center;
+  grid-gap: 50px 100px;
+  text-align: center;
+  max-width: 900px;
+  margin: 36px auto;
+  @media (max-width: $screen-xl) { //1280px
+    margin: 36px 12%;
+  }
+  img {
+    max-height: 400px;
+    max-width: 400px;
+  }
+}
+
+.product-3 {
+  grid-column: 1 / 3;
 }
