--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,39 @@
+@font-face {
+  font-family: "Graphik-Medium";
+  src: url("assets/fonts/Graphik-Medium.ttf");
+}
+body {
+  font-family: "Graphik-Medium";
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+}
+
+.left {
+  text-align: left;
+}
+
 .product-landing-wrapper {
   display: grid;
   grid-template-columns: 26% 48% 26%;
   text-align: center;
+  background: #f8f8f9;
+  padding: 0 10%;
 }
 .product-landing-wrapper img {
   width: 100%;
+}
+.product-landing-wrapper h1 {
+  font-size: 24px;
 }
 
 .sticky-wrapper {
   position: sticky;
   top: 0px;
+  padding: 50% 0;
 }
-
 .product-pages-wrapper {
   display: grid;
   grid-template-columns: auto auto;
