--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,12 @@ h2 {
   font-weight: 100;
 }
 
+a {
+  text-decoration: underline;
+  font-size: 14px;
+  color: black;
+}
+
 .top-section {
   background: #f8f8f9;
 }
@@ -114,8 +120,7 @@ h2 {
   padding: 6px 24px;
 }
 
-.cycle-link {
-  text-decoration: underline;
+.cylce-link {
   font-size: 14px;
 }
 
@@ -141,8 +146,25 @@ h2 {
   text-align: left;
 }
 
-.product-3 {
+.horizontal {
+  padding: 16% 0;
+}
+
+#product-3 {
   grid-column: 1/3;
+}
+#product-3 .product-3-wrapper {
+  width: 50%;
+  margin: auto;
+}
+
+.product-link {
+  margin: 18px 0 6px;
+}
+
+.product-description {
+  font-size: 12px;
+  text-align: left;
 }
 
 /*# sourceMappingURL=styles.css.map */
