--- a/styles.scss
+++ b/styles.scss
@@ -45,6 +45,13 @@ h2 {
   font-weight: 100;
 }
 
+a {
+  text-decoration: underline;
+  font-size: 14px;
+  color: black;
+}
+
+
 //---------------------------- PRODUCT LANDING -------------------------------//
 
 .top-section {
@@ -141,8 +148,7 @@ h2 {
   padding: 6px 24px;
 }
 
-.cycle-link {
-  text-decoration: underline;
+.cylce-link {
   font-size: 14px;
 }
 
@@ -168,6 +174,23 @@ h2 {
   }
 }
 
-.product-3 {
+.horizontal {
+  padding: 16% 0;
+}
+
+#product-3 {
   grid-column: 1 / 3;
+  .product-3-wrapper {
+    width: 50%;
+    margin: auto;
+  }
+}
+
+.product-link {
+  margin: 18px 0 6px;
+}
+
+.product-description {
+  font-size: 12px;
+  text-align: left;
 }
