--- a/styles.scss
+++ b/styles.scss
@@ -43,6 +43,9 @@ h2 {
   line-height: 1.75;
   margin-bottom: 24px;
   font-weight: 100;
+  @media (max-width: $screen-xl) { //1280px
+    font-size: 1.2vw;
+  }
 }
 
 a {
@@ -63,15 +66,21 @@ a {
   grid-template-columns: 26% 48% 26%;
   text-align: center;
   font-size: 6px;
-  max-width: 1100px;
-  margin: auto;
-  padding: 36px;
+  margin: 0 10%;
+  padding: 36px 0;
   img {
-    width: 100%;
-  }
-  @media (max-width: $screen-xl) { //1280px
-    max-width: unset;
-    margin: 0 10%;
+    max-height: 95vh;
+    min-width: 50%;
+    max-width: 100%;
+    // @media (max-width: $screen-xxl) { //1440px
+    //   max-height: 80vh;
+    // }
+    // @media (max-width: $screen-xl) { //1280px
+    //   max-height: 75vh;
+    // }
+    // @media (max-width: $screen-lg) {
+    //   max-height: 60vh;
+    // }
   }
 }
 
@@ -89,15 +98,26 @@ a {
   font-size: 16px;
   border: 1px solid black;
   margin-bottom: 24px;
+  @media (max-width: $screen-xl) { //1280px
+    font-size: 1.2vw;
+  }
 }
 
 .color-buttons {
   .color {
-    padding: 6px 24px;
+    padding: 6px 6%;
+    width: 100%;
+    @media (max-width: $screen-xl) { //1280px
+      padding: 6px 3%;
+    }
   }
   .black {
     background: black;
     color: white;
+    .check {
+      font-size: 10px;
+      padding: 0 6%;
+    }
   }
   .beige {
     background: #f2d9a5;
@@ -150,6 +170,9 @@ a {
 
 .cylce-link {
   font-size: 14px;
+  @media (max-width: $screen-xl) { //1280px
+    font-size: 1vw;
+  }
 }
 
 //----------------------------- PRODUCT PAGES --------------------------------//
@@ -161,9 +184,9 @@ a {
   grid-gap: 50px 150px;
   text-align: center;
   max-width: 900px;
-  margin: 36px auto;
+  margin: 36px auto 150px;
   @media (max-width: $screen-xl) { //1280px
-    margin: 36px 12%;
+    margin: 36px 12% 150px;
   }
   img {
     max-height: 400px;
@@ -188,6 +211,7 @@ a {
 
 .product-link {
   margin: 18px 0 6px;
+  letter-spacing: 1.5px;
 }
 
 .product-description {
