--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,11 @@ h2 {
   margin-bottom: 24px;
   font-weight: 100;
 }
+@media (max-width: 1280px) {
+  h2 {
+    font-size: 1.2vw;
+  }
+}
 
 a {
   text-decoration: underline;
@@ -40,18 +45,13 @@ a {
   grid-template-columns: 26% 48% 26%;
   text-align: center;
   font-size: 6px;
-  max-width: 1100px;
-  margin: auto;
-  padding: 36px;
+  margin: 0 10%;
+  padding: 36px 0;
 }
 .product-landing-wrapper img {
-  width: 100%;
-}
-@media (max-width: 1280px) {
-  .product-landing-wrapper {
-    max-width: unset;
-    margin: 0 10%;
-  }
+  max-height: 95vh;
+  min-width: 50%;
+  max-width: 100%;
 }
 
 .sticky-wrapper {
@@ -68,13 +68,28 @@ a {
   border: 1px solid black;
   margin-bottom: 24px;
 }
+@media (max-width: 1280px) {
+  .flex {
+    font-size: 1.2vw;
+  }
+}
 
 .color-buttons .color {
-  padding: 6px 24px;
+  padding: 6px 6%;
+  width: 100%;
+}
+@media (max-width: 1280px) {
+  .color-buttons .color {
+    padding: 6px 3%;
+  }
 }
 .color-buttons .black {
   background: black;
   color: white;
+}
+.color-buttons .black .check {
+  font-size: 10px;
+  padding: 0 6%;
 }
 .color-buttons .beige {
   background: #f2d9a5;
@@ -123,6 +138,11 @@ a {
 .cylce-link {
   font-size: 14px;
 }
+@media (max-width: 1280px) {
+  .cylce-link {
+    font-size: 1vw;
+  }
+}
 
 .product-pages-wrapper {
   display: grid;
@@ -131,11 +151,11 @@ a {
   grid-gap: 50px 150px;
   text-align: center;
   max-width: 900px;
-  margin: 36px auto;
+  margin: 36px auto 150px;
 }
 @media (max-width: 1280px) {
   .product-pages-wrapper {
-    margin: 36px 12%;
+    margin: 36px 12% 150px;
   }
 }
 .product-pages-wrapper img {
@@ -160,6 +180,7 @@ a {
 
 .product-link {
   margin: 18px 0 6px;
+  letter-spacing: 1.5px;
 }
 
 .product-description {
