--- a/styles.css
+++ b/styles.css
@@ -148,14 +148,14 @@ a {
   display: grid;
   grid-template-columns: auto auto;
   justify-content: center;
-  grid-gap: 50px 150px;
+  grid-gap: 50px 12%;
   text-align: center;
-  max-width: 900px;
   margin: 36px auto 150px;
 }
-@media (max-width: 1280px) {
+@media (max-width: 576px) {
   .product-pages-wrapper {
-    margin: 36px 12% 150px;
+    grid-template-columns: auto;
+    margin: 36px 10%;
   }
 }
 .product-pages-wrapper img {
@@ -168,6 +168,18 @@ a {
     max-width: 400px;
   }
 }
+@media (max-width: 768px) {
+  .product-pages-wrapper img {
+    max-height: 250px;
+    max-width: 250px;
+  }
+}
+@media (max-width: 576px) {
+  .product-pages-wrapper img {
+    max-height: 585px;
+    max-width: 100%;
+  }
+}
 .product-pages-wrapper h1 {
   text-align: left;
 }
@@ -175,23 +187,51 @@ a {
 .horizontal {
   padding: 16% 0;
 }
+@media (max-width: 576px) {
+  .horizontal {
+    padding: 0;
+  }
+}
 
 #product-3 {
   grid-column: 1/3;
 }
+@media (max-width: 576px) {
+  #product-3 {
+    grid-column: unset;
+  }
+}
 #product-3 .product-3-wrapper {
   width: 50%;
   margin: auto;
+}
+@media (max-width: 576px) {
+  #product-3 .product-3-wrapper {
+    width: unset;
+  }
 }
 
 .product-link {
   margin: 18px 0 6px;
   letter-spacing: 1.5px;
 }
+@media (max-width: 576px) {
+  .product-link {
+    font-size: 10px;
+    margin: 18px 0 0;
+  }
+}
 
 .product-description {
   font-size: 12px;
   text-align: left;
+  font-weight: 100;
+}
+@media (max-width: 576px) {
+  .product-description {
+    font-size: 8px;
+    letter-spacing: 1px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
