--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,11 @@ h1 {
   margin-bottom: 28px;
   font-weight: 900;
 }
+@media (max-width: 576px) {
+  h1 {
+    margin-bottom: 18px;
+  }
+}
 
 h2 {
   text-align: left;
@@ -27,6 +32,12 @@ h2 {
 @media (max-width: 1280px) {
   h2 {
     font-size: 1.2vw;
+  }
+}
+@media (max-width: 576px) {
+  h2 {
+    font-size: 10px;
+    margin-bottom: 18px;
   }
 }
 
@@ -53,12 +64,43 @@ a {
   min-width: 50%;
   max-width: 100%;
 }
+@media (max-width: 576px) {
+  .product-landing-wrapper {
+    display: block;
+  }
+}
+
+@media (max-width: 576px) {
+  .product-image-wrapper-desktop {
+    display: none;
+  }
+}
+
+.product-image-wrapper-mobile {
+  display: none !important;
+}
+@media (max-width: 576px) {
+  .product-image-wrapper-mobile {
+    display: block !important;
+  }
+}
 
 .sticky-wrapper {
   position: sticky;
   top: 0px;
   padding: 50% 0 100%;
   height: 316px;
+}
+@media (max-width: 576px) {
+  .sticky-wrapper {
+    position: relative;
+    height: auto;
+    padding: 0;
+  }
+}
+
+.product-description-wrapper {
+  padding: 24px 0;
 }
 
 .flex {
