--- a/styles.scss
+++ b/styles.scss
@@ -79,9 +79,11 @@ a {
     max-height: 95vh;
     min-width: 50%;
     max-width: 100%;
+    margin: auto;
   }
   @media (max-width: $screen-sm)  { //1280px
     display: block;
+    padding: 36px 0 0;
   }
 }
 
@@ -122,8 +124,12 @@ a {
   font-size: 16px;
   border: 1px solid black;
   margin-bottom: 24px;
+  text-align: left;
   @media (max-width: $screen-xl) { //1280px
-    font-size: 1.2vw;
+    font-size: 1vw;
+  }
+  @media (max-width: $screen-sm) { //1280px
+    font-size: 3.8vw;
   }
 }
 
@@ -138,9 +144,9 @@ a {
   .black {
     background: black;
     color: white;
-    .check {
-      font-size: 10px;
-      padding: 0 6%;
+    img {
+      height: 14px;
+      margin: -3px 0;
     }
   }
   .beige {
@@ -190,12 +196,21 @@ a {
   background: black;
   color: white;
   padding: 6px 24px;
+  @media (max-width: $screen-sm) { //1280px
+    font-size: 3.8vw;
+  }
 }
 
-.cylce-link {
+.cycle-link {
   font-size: 14px;
   @media (max-width: $screen-xl) { //1280px
     font-size: 1vw;
+  }
+  @media (max-width: $screen-sm) { //1280px
+    font-size: 3.2vw;
+    text-align: center;
+    margin: auto;
+    padding: 12px 0 24px;
   }
 }
 
