--- a/styles.scss
+++ b/styles.scss
@@ -142,9 +142,10 @@ a {
       padding: 6px 3%;
     }
   }
-  .black {
+  .black, .beige {
     background: black;
     color: white;
+    cursor: pointer;
     img {
       height: 1.3vw;
       margin: -8% 0;
@@ -166,7 +167,7 @@ a {
 
 .quantity {
   .selector {
-    padding: 6px 6%;
+    padding: 2px 6%;
     line-height: 2;
   }
   .quantity-counter {
@@ -180,14 +181,30 @@ a {
   }
 }
 
+.dropdown-content {
+  display: none;
+  position: absolute;
+  margin: 25px 0;
+  border-right: 1px solid;
+  border-left: 1px solid;
+  background-color: #f9f9f9;
+  left: 0;
+  list-style-type: none;
+  z-index: 1;
+  width: 99%;
+  li {
+    border-bottom: 1px solid;
+    padding: 12px 6%;
+  }
+}
+
 .size {
   .size-choice {
-    padding: 6px 24px;
+    padding: 6px 6%;
   }
   .dropdown {
-    border-left: 1px solid black;
+    padding: 0 6%;
     .carrot {
-      padding: 0px 12px;
       line-height: 2;
       transform: scale(2, 1);
     }
