--- a/styles.scss
+++ b/styles.scss
@@ -122,10 +122,10 @@ a {
 .flex {
   display: flex;
   justify-content: space-between;
-  font-size: 14px;
   border: 1px solid black;
   margin-bottom: 24px;
   text-align: left;
+  font-size: 14px;
   @media (max-width: $screen-xl) { //1280px
     font-size: 1vw;
   }
@@ -184,21 +184,37 @@ a {
 .dropdown-content {
   display: none;
   position: absolute;
-  margin: 25px 0;
   border-right: 1px solid;
   border-left: 1px solid;
   background-color: #f9f9f9;
   left: 0;
   list-style-type: none;
   z-index: 1;
-  width: 99%;
+  margin-top: -12px;
+  width: 99.5%;
+  @media (max-width: 1100px) { //1280px
+    width: 99%;
+  }
+  @media (max-width: $screen-md) { //1280px
+    width: 98.5%;
+  }
   li {
     border-bottom: 1px solid;
     padding: 12px 6%;
+    text-align: left;
+    font-size: initial;
+    font-size: 14px;
+    @media (max-width: $screen-xl) { //1280px
+      font-size: 1vw;
+    }
+    @media (max-width: $screen-sm) { //1280px
+      font-size: 3.8vw;
+    }
   }
 }
 
 .size {
+  margin-bottom: 12px;
   .size-choice {
     padding: 6px 6%;
   }
@@ -216,6 +232,9 @@ a {
   font-size: 10px;
   text-align: left;
   font-weight: 100;
+  @media (max-width: $screen-xl) and (min-width: $screen-sm) { //1280px
+    font-size: .8vw;
+  }
 }
 
 .add-to-cart {
@@ -223,6 +242,7 @@ a {
   background: black;
   color: white;
   padding: 6px 24px;
+  margin-top: 36px;
   @media (max-width: $screen-sm) { //1280px
     font-size: 3.8vw;
   }
@@ -230,6 +250,9 @@ a {
 
 .cycle-link {
   font-size: 14px;
+  @media (max-width: $screen-xxl) { //1280px
+    font-size: 12px;
+  }
   @media (max-width: $screen-xl) { //1280px
     font-size: 1vw;
   }
