--- a/styles.css
+++ b/styles.css
@@ -92,9 +92,11 @@ a {
 
 .sticky-wrapper {
   position: sticky;
+  position: -webkit-sticky;
+  -webkit-align-self: center;
   top: 0px;
   padding: 50% 0 100%;
-  height: 316px;
+  height: 400px;
 }
 @media (max-width: 576px) {
   .sticky-wrapper {
@@ -198,6 +200,11 @@ a {
     width: 98.5%;
   }
 }
+@media (max-width: 576px) {
+  .dropdown-content {
+    width: 99.5%;
+  }
+}
 .dropdown-content li {
   border-bottom: 1px solid;
   padding: 12px 6%;
@@ -214,6 +221,10 @@ a {
   .dropdown-content li {
     font-size: 3.8vw;
   }
+}
+
+.size-button {
+  position: relative;
 }
 
 .size {
