--- a/styles.scss
+++ b/styles.scss
@@ -104,9 +104,11 @@ a {
 
 .sticky-wrapper {
   position: sticky;
+  position: -webkit-sticky;
+  -webkit-align-self: center;
   top: 0px;
   padding: 50% 0 100%;
-  height: 316px;
+  height: 400px;
   @media (max-width: $screen-sm)  { //1280px
     position: relative;
     height: auto;
@@ -198,6 +200,9 @@ a {
   @media (max-width: $screen-md) { //1280px
     width: 98.5%;
   }
+  @media (max-width: $screen-sm) { //1280px
+    width: 99.5%;
+  }
   li {
     border-bottom: 1px solid;
     padding: 12px 6%;
@@ -211,6 +216,10 @@ a {
       font-size: 3.8vw;
     }
   }
+}
+
+.size-button {
+  position: relative;
 }
 
 .size {
