--- a/styles.scss
+++ b/styles.scss
@@ -7,22 +7,18 @@ $screen-md:                           768px;
 $screen-lg:                           993px;
 $screen-xl:                           1280px;
 $screen-xxl:                          1440px;
-$screen-sm-max:                       ($screen-sm - 1);
-$screen-md-max:                       ($screen-md - 1);
-$screen-lg-max:                       ($screen-lg - 1);
-$screen-xl-max:                       ($screen-xl - 1);
 
 // colors
 $background-color:                    #f8f8f9;
 
-//-------------------------------- GENERAL -----------------------------------//
+//--------------------------------- FONTS ------------------------------------//
 
 @font-face{
   font-family: 'Graphik-Medium';
-  src:url('assets/fonts/Graphik-Medium.ttf');
-  font-weight: 100, 300, 900;
-  font-style: normal;
+  src:url('/assets/fonts/Graphik-Medium.otf') format('otf'), url('/assets/fonts/Graphik-Medium.woff') format('woff'), url('assets/fonts/Graphik-Medium.ttf') format('truetype');
 }
+
+//-------------------------------- GENERAL -----------------------------------//
 
 body {
   font-family: 'Graphik-Medium';
@@ -33,8 +29,7 @@ h1 {
   letter-spacing: 4px;
   text-align: left;
   margin-bottom: 28px;
-  font-weight: 900;
-  @media (max-width: $screen-sm)  { //1280px
+  @media (max-width: $screen-sm)  {
     margin-bottom: 18px
   }
 }
@@ -46,12 +41,12 @@ h2 {
   line-height: 1.75;
   margin-bottom: 24px;
   font-weight: 100;
-  @media (max-width: $screen-xl)  { //1280px
+  @media (max-width: $screen-xl)  {
     font-size: 1.2vw;
   }
-  @media (max-width: $screen-sm)  { //1280px
+  @media (max-width: $screen-sm)  {
     font-size: 10px;
-    margin-bottom: 18px
+    margin-bottom: 18px;
   }
 }
 
@@ -62,86 +57,108 @@ a {
 }
 
 
-//---------------------------- PRODUCT LANDING -------------------------------//
-
-.top-section {
-    background: $background-color;
-}
+//--------------------- PRODUCT LANDING - TOP SECTION ------------------------//
 
 .product-landing-wrapper {
   display: grid;
   grid-template-columns: 26% 48% 26%;
   text-align: center;
   font-size: 6px;
-  margin: 0 10%;
-  padding: 36px 0;
+  padding: 0 10%;
+  background: $background-color;
+  @media (max-width: $screen-sm)  {
+    display: block;
+  }
   img {
     max-height: 95vh;
     min-width: 50%;
     max-width: 100%;
     margin: auto;
   }
-  @media (max-width: $screen-sm)  { //1280px
-    display: block;
-    padding: 36px 0 0;
-  }
 }
 
-.product-image-wrapper-desktop{
+//------------------------ FEATURED PRODUCT IMAGE ----------------------------//
+
+.product-scrolling-image-wrapper-desktop{
   cursor: zoom-in;
-  @media (max-width: $screen-sm)  { //1280px
+  img {
+    padding: 36px 0;
+  }
+  @media (max-width: $screen-sm)  {
     display: none;
   }
 }
 
 .product-image-wrapper-mobile{
   display: none !important;
-  @media (max-width: $screen-sm)  { //1280px
+  @media (max-width: $screen-sm)  {
     display: block !important;
   }
 }
 
+//------------------- LEFT & RIGHT PRODUCT DESCRIPTION -----------------------//
 
-.sticky-wrapper {
+
+.product-description-wrapper {
+  padding: 24px 0;
+}
+
+.side-sections-wrapper {
   position: sticky;
   position: -webkit-sticky;
   -webkit-align-self: center;
   top: 0px;
   padding: 50% 0 100%;
   height: 400px;
-  @media (max-width: $screen-sm)  { //1280px
+  @media (max-width: $screen-sm)  {
     position: relative;
     height: auto;
     padding: 0;
   }
+  .flex {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+    margin-bottom: 24px;
+    text-align: left;
+    font-size: 14px;
+    @media (max-width: $screen-xl) {
+      font-size: 1vw;
+    }
+    @media (max-width: $screen-sm) {
+      font-size: 3.8vw;
+    }
+  }
 }
 
-.product-description-wrapper {
-  padding: 24px 0;
-}
-
-
-.flex {
-  display: flex;
-  justify-content: space-between;
-  border: 1px solid black;
-  margin-bottom: 24px;
-  text-align: left;
+.cycle-link {
   font-size: 14px;
-  @media (max-width: $screen-xl) { //1280px
+  @media (max-width: $screen-xxl) {
+    font-size: 12px;
+  }
+  @media (max-width: $screen-xl) {
     font-size: 1vw;
   }
-  @media (max-width: $screen-sm) { //1280px
-    font-size: 3.8vw;
+  @media (max-width: $screen-lg) {
+    font-size: .8vw;
+  }
+  @media (max-width: $screen-sm) {
+    font-size: 3.2vw;
+    text-align: center;
+    margin: auto;
+    padding: 12px 0 24px;
   }
 }
+
+//---------------------------- COLOR SELECTOR --------------------------------//
 
 .color-buttons {
   .color {
     padding: 6px 6%;
     width: 100%;
-    @media (max-width: $screen-xl) { //1280px
-      padding: 6px 3%;
+    white-space: nowrap;
+    @media (max-width: $screen-xl) {
+      padding: 6px 4%;
     }
   }
   .black, .beige {
@@ -152,10 +169,10 @@ a {
       height: 1.3vw;
       margin: -8% 0;
       min-width: unset;
-      @media (max-width: $screen-xl) { //1280px
+      @media (max-width: $screen-xl) {
         margin: -4% 0;
       }
-      @media (max-width: $screen-sm) { //1280px
+      @media (max-width: $screen-sm) {
         height: 6vw;
         margin: -8% 0;
         min-width: unset;
@@ -167,10 +184,12 @@ a {
   }
 }
 
+//--------------------------- QUANTITY SELECTOR ------------------------------//
 .quantity {
   .selector {
     padding: 2px 6%;
     line-height: 2;
+    white-space: nowrap;
   }
   .quantity-counter {
     padding: 6px 24px;
@@ -183,44 +202,7 @@ a {
   }
 }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  border-right: 1px solid;
-  border-left: 1px solid;
-  background-color: #f9f9f9;
-  left: 0;
-  list-style-type: none;
-  z-index: 1;
-  margin-top: -12px;
-  width: 99.5%;
-  @media (max-width: 1100px) { //1280px
-    width: 99%;
-  }
-  @media (max-width: $screen-md) { //1280px
-    width: 98.5%;
-  }
-  @media (max-width: $screen-sm) { //1280px
-    width: 99.5%;
-  }
-  li {
-    border-bottom: 1px solid;
-    padding: 12px 6%;
-    text-align: left;
-    font-size: initial;
-    font-size: 14px;
-    @media (max-width: $screen-xl) { //1280px
-      font-size: 1vw;
-    }
-    @media (max-width: $screen-sm) { //1280px
-      font-size: 3.8vw;
-    }
-  }
-}
-
-.size-button {
-  position: relative;
-}
+//----------------------------- SIZE SELECTOR --------------------------------//
 
 .size {
   margin-bottom: 12px;
@@ -236,15 +218,55 @@ a {
   }
 }
 
+.size-button {
+  position: relative;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  border-right: 1px solid;
+  border-left: 1px solid;
+  background-color: #f9f9f9;
+  left: 0;
+  list-style-type: none;
+  z-index: 1;
+  margin-top: -24px;
+  width: 99.5%;
+  @media (max-width: 1100px) {
+    width: 99%;
+  }
+  @media (max-width: $screen-md) {
+    width: 98.5%;
+  }
+  @media (max-width: $screen-sm) {
+    width: 99.5%;
+  }
+  li {
+    border-bottom: 1px solid;
+    padding: 12px 6%;
+    text-align: left;
+    font-size: initial;
+    font-size: 14px;
+    @media (max-width: $screen-xl) {
+      font-size: 1vw;
+    }
+    @media (max-width: $screen-sm) {
+      font-size: 3.8vw;
+    }
+  }
+}
+
 .size-link {
   text-decoration: underline;
   font-size: 10px;
   text-align: left;
-  font-weight: 100;
-  @media (max-width: $screen-xl) and (min-width: $screen-sm) { //1280px
+  @media (max-width: $screen-xl) and (min-width: $screen-sm) {
     font-size: .8vw;
   }
 }
+
+//-------------------------- ADD TO CART BUTTON ------------------------------//
 
 .add-to-cart {
   text-align: center;
@@ -252,29 +274,11 @@ a {
   color: white;
   padding: 6px 24px;
   margin-top: 36px;
-  @media (max-width: $screen-sm) { //1280px
+  @media (max-width: $screen-sm) {
     font-size: 3.8vw;
   }
 }
 
-.cycle-link {
-  font-size: 14px;
-  @media (max-width: $screen-xxl) { //1280px
-    font-size: 12px;
-  }
-  @media (max-width: $screen-xl) { //1280px
-    font-size: 1vw;
-  }
-  @media (max-width: $screen-lg) { //1280px
-    font-size: .8vw;
-  }
-  @media (max-width: $screen-sm) { //576px
-    font-size: 3.2vw;
-    text-align: center;
-    margin: auto;
-    padding: 12px 0 24px;
-  }
-}
 
 //----------------------------- PRODUCT PAGES --------------------------------//
 
@@ -285,47 +289,44 @@ a {
   grid-gap: 50px 12%;
   text-align: center;
   margin: 36px auto 150px;
-  @media (max-width: $screen-sm) { //576px
+  @media (max-width: $screen-sm) {
     grid-template-columns: auto;
     margin: 36px 10%;
   }
   img {
     max-height: 600px;
     max-width: 600px;
-    @media (max-width: $screen-xxl) { //1440px
+    @media (max-width: $screen-xxl) {
       max-height: 400px;
       max-width: 400px;
     }
-    @media (max-width: $screen-md) { //1440px
+    @media (max-width: $screen-md) {
       max-height: 250px;
       max-width: 250px;
     }
-    @media (max-width: $screen-sm) { //1440px
+    @media (max-width: $screen-sm) {
       max-height: 585px;
       max-width: 100%;
     }
-  }
-  h1 {
-    text-align: left;
   }
 }
 
 .horizontal {
   padding: 16% 0;
-  @media (max-width: $screen-sm) { //576px
+  @media (max-width: $screen-sm) {
     padding: 0;
   }
 }
 
 #product-3 {
   grid-column: 1 / 3;
-  @media (max-width: $screen-sm) { //576px
+  @media (max-width: $screen-sm) {
     grid-column: unset;
   }
   .product-3-wrapper {
     width: 50%;
     margin: auto;
-    @media (max-width: $screen-sm) { //576px
+    @media (max-width: $screen-sm) {
       width: unset;
     }
   }
@@ -334,7 +335,7 @@ a {
 .product-link {
   margin: 18px 0 6px;
   letter-spacing: 1.5px;
-  @media (max-width: $screen-sm)  { //1280px
+  @media (max-width: $screen-sm)  {
     font-size: 10px;
     margin: 18px 0 0;
   }
@@ -343,8 +344,7 @@ a {
 .product-description {
   font-size: 12px;
   text-align: left;
-  font-weight: 100;
-  @media (max-width: $screen-sm)  { //1280px
+  @media (max-width: $screen-sm)  {
     font-size: 8px;
     letter-spacing: 1px;
   }
