--- a/styles.scss
+++ b/styles.scss
@@ -352,7 +352,7 @@ a {
 
 //--------------------------------- ZOOM -------------------------------------//
 
-.zoom .product-image-wrapper-desktop {
+.zoom .product-scrolling-image-wrapper-desktop {
   position: absolute;
   z-index: 1;
   cursor: zoom-out;
@@ -360,6 +360,7 @@ a {
     width: 100%;
     margin: -2px;
     pointer-events: none;
+    padding: 0;
   }
 }
 //---------------------------- SLICK OVERRIDE --------------------------------//
